<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bmi_tv"
        android:text="@string/bmi_calculator"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        />

    <EditText
        android:id="@+id/et_bb"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/bmi_tv"
        android:background="@drawable/border_rectangle"
        android:hint="@string/masukkan_berat_badan_kg"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:inputType="number"
        tools:ignore="TextFields" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/et_tb"
        android:layout_below="@id/et_bb"
        android:hint="@string/masukkan_tinggi_badan_cm"
        android:background="@drawable/border_rectangle"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:inputType="number" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cardview_dark_background"
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_count"
        android:text="@string/hitung"
        android:layout_below="@id/et_tb"/>



</RelativeLayout>